fix staffanm/lagen.nu#27 (more whitespace in left nav)

--- a/ferenda/res/css/ferenda.css
+++ b/ferenda/res/css/ferenda.css
@@ -98,7 +98,7 @@ this grid system directly under body? */
     margin: 0;
 }
 .col-sm-3, .col-sm-5, .col-sm-7, .col-sm-9 {
-    padding: 0;
+    padding: 0 1em 0 0;
 }
 
 @media only screen and (min-width: 480px) {
